# pybmc

./: .gitignore  404.html  AUTHORS.md  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yml  deploy.yml  gh-pages.bak  gh-pages.yml
CONTRIBUTING/: index.html
api_reference/: index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_3f746367f7b790ef___init___py.html  z_3f746367f7b790ef_bmc_py.html  z_3f746367f7b790ef_data_py.html  z_3f746367f7b790ef_inference_utils_py.html  z_3f746367f7b790ef_sampling_utils_py.html
docs/: CONTRIBUTING.md  api_reference.md  index.md  license.md  theory.md  usage.md
docs/stylesheets/: extra.css
license/: index.html
pybmc/: __init__.py  bmc.py  data.py  inference_utils.py  models.py  reminders.md  sampling_utils.py  test.ipynb  test.py
pybmc trials/: bmc.py  dataprocessing.ipynb  dataset.py  dataset_trial2.py  test_notebook.ipynb
pybmc_trials/: dataset.py  dataset_nuclear.py  model.py  testing.py
search/: search_index.json
tests/: test_bmc.py  test_data.py  test_inference_utils.py  test_models.py
theory/: index.html
usage/: index.html
