[tool.poetry]
name = "pybmc"
version = "0.1.2"
description = "A package for Bayesian model combination"
authors = ["Kyle Godbey <pybmc@ascsn.net>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/ascsn/pybmc"
repository = "https://github.com/ascsn/pybmc"
documentation = "https://ascsn.github.io/pybmc/"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
scipy = "^1.15.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.6.16"
mkdocstrings-python = "^1.16.0"

[tool.poetry.group.ci.dependencies]
pytest = "^7.0.0"
flake8 = "^7.0.0"
Flake8-pyproject = "^1.2.0"
mypy = "^1.4.0"
black = "^23.0.0"
bandit = "^1.7.0"
coverage = "^7.0.0"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 79

[tool.flake8]
extend-ignore = ['E501']
exclude = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"